--- a/SummaRuNNer/.gitignore
+++ b/SummaRuNNer/.gitignore
@@ -4,6 +4,15 @@ __pycache__
 data/*
 !data/.placeholder
 
+outputs/rnn_rnn/*
+!outputs/rnn_rnn/.placeholder
+
+outputs/cnn_rnn/*
+!outputs/cnn_rnn/.placeholder
+
+outputs/attn_rnn/*
+!outputs/attn_rnn/.placeholder
+
 outputs/hyp/*
 !outputs/hyp/.placeholder
 
