--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .idea/
 *.tgz
+sample_10k/
 cnn_stories/
 dailymail_stories/
 data/
 extracted/
+error_analysis/*10
+error_analysis/ref
 *.iml
 glove/
 *.pyc
